tests/types/errors/none_compared_with_int.mochi
// MEP-16 T059: comparing `none` (or any option-typed value) against a
// bare non-optional operand is rejected. The result can never be true
// because the option's payload, when present, is wrapped in `Some`.
let bad = 5 == none
